--- a/dev/index.html
+++ b/dev/index.html
@@ -2,8 +2,44 @@
     <head>
         <link async rel="stylesheet" href="app.css">
     </head>
-    <body data-h2-core data-h2-props>
-        <div data-h2-padding="mqb(all, 3)">
+    <body data-h2-core data-h2-props data-h2-menu-wrapper="top(center, sticky)">
+        <button 
+            aria-label="This button opens the main navigation menu."
+            aria-expanded="false"
+            aria-haspopup="true"
+            data-h2-mobile-menu-trigger
+            type="button" role="button">
+            <span data-h2-mobile-menu-trigger-open-label>Menu</span><span data-h2-mobile-menu-trigger-close-label>Close</span>
+        </button>
+        <nav 
+            data-h2-menu
+            role="navigation">
+            <ul data-h2-main-menu>
+                <li><a href="" role="menuitem" title="">Home</a></li>
+                <li><a href="" role="menuitem" title="">About Us</a></li>
+                <li><a href="" role="menuitem" title="">Features</a></li>
+                <li><a href="" role="menuitem" title="">Pricing</a></li>
+                <!-- This item provides an example of how a submenu works. Items with submenus require the button element. Submenus can be nested up to a hard cap of 5 layers. -->
+                <li>
+                    <!-- The parent menu item. -->
+                    <a href="" role="menuitem" title="">Account</a>
+                    <!-- The submenu trigger. Note the data-c-add/remove properties. -->
+                    <button 
+                        aria-expanded="false"
+                        data-h2-submenu-trigger>
+                        <span data-h2-submenu-trigger-add-icon>+</span>
+                        <span data-h2-submenu-trigger-remove-icon>-</span>
+                    </button>
+                    <!-- The submenu. -->
+                    <ul data-h2-submenu>
+                        <li><a href="" role="menuitem" title="">My Profile</a></li>
+                        <li><a href="" role="menuitem" title="">Notifications</a></li>
+                        <li><a href="" role="menuitem" title="">Account Settings</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+        <main data-h2-padding="mqb(all, 3)">
             <div data-h2-container="mqb(large, center)">
                 <h1 
                     data-h2-heading="mqb(h3) mqs(h4) mql(h5)" 
@@ -163,7 +199,7 @@
                     </fieldset>
                 </form>
             </div>
-        </div>
+        </main>
         <script src="cash.min.js"></script>
         <script src="h2-system.min.js"></script>
         <script src="h2-component-accordion-0-0-15.min.js"></script>
